# Sistema-de-clonacion-de-voz-y-ajuste-de-prosodia-para-la-educacion

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
Front/: Dockerfile  package-lock.json  package.json  tailwind.config.js
Front/src/: App.jsx  config.js  setupTests.js
Front/src/components/: AudioPlayer.jsx  MultiSpeechGenerator.jsx  ProsodyModifier.jsx  SpeechTypeInput.jsx  TextGeneratorBubble.jsx
Front/src/components/__tests__/: AudioPlayer.test.jsx  MultiSpeechGenerator.test.jsx  ProsodyModifier.test.jsx  SpeechTypeInput.test.jsx
Front/src/services/: apiService.js
src/: __init__.py
src/f5_tts/infer/: __init__.py  infer_gradio.py  package-lock.json  prosody.py  speech_edit.py  speech_types.json  utils_infer.py
src/f5_tts/infer/temp_uploads/: Lento_1748057118_Narracion_triste.m4a  Regular_1748052954_La_informatica_regular.m4a  Regular_1748053381_Sistema_de_informacion_regular.m4a
