[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "f5-tts"
version = "0.1.0"
description = "conversor de voz personalizado para videoclases"
authors = ["Leonardo <leonardo.munoz.f@usach.cl>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

# Especificar los paquetes para que Poetry los reconozca correctamente
packages = [
    { include = "f5_tts" }
]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^20.1.0"
accelerate = ">=0.33.0"
bitsandbytes = ">0.37.0"
cached_path = "*"
click = "*"
datasets = "*"
ema_pytorch = ">=0.5.2"
gradio = ">=3.45.2"
jieba = "*"
librosa = "*"
matplotlib = "*"
numpy = "<=1.26.4"
pydub = "*"
pypinyin = "*"
safetensors = "*"
soundfile = "*"
tomli = "*"
torch = ">=2.0.0"
torchaudio = ">=2.0.0"
torchdiffeq = "*"
tqdm = ">=4.65.0"
transformers = "*"
transformers_stream_generator = "*"
vocos = "*"
wandb = "*"
x_transformers = ">=1.31.14"
num2words = "*"
flask = "*"
flask_cors = "*"
apscheduler = "*"
torchvision = "*"
faster_whisper = "0.10.1"
whisper_timestamped = "*"

[tool.poetry.extras]
eval = ["faster_whisper", "funasr", "jiwer", "modelscope", "zhconv", "zhon"]

[tool.poetry.urls]
Homepage = "https://github.com/SWivid/F5-TTS"

[tool.poetry.scripts]
"f5-tts_infer-cli" = "f5_tts.infer.infer_cli:main"
"f5-tts_infer-gradio" = "f5_tts.infer.infer_gradio:main"
"f5-tts_finetune-cli" = "f5_tts.train.finetune_cli:main"
"f5-tts_finetune-gradio" = "f5_tts.train.finetune_gradio:main"
